--- a/SalesPersonAllocator/ClientApp/src/custom.css
+++ b/SalesPersonAllocator/ClientApp/src/custom.css
@@ -38,22 +38,7 @@ code {
   padding-bottom: 5px;
 }
 
-.Modal {
-  position: fixed;
-  z-index: 500;
-  background-color: white;
-  width: 70%;
-  border: 1px solid #ccc;
-  box-shadow: 1px 1px 1px black;
-  padding: 16px;
-  left: 15%;
-  top: 30%;
-  box-sizing: border-box;
-  transition: all 0.3s ease-out;
-  border-radius: 25px;
-}
-
-.rowC {
+.row {
   display: flex;
   flex-direction: row;
   height: 50px;
